--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "start": "node src/server/index.js",
-    "build-prod": "webpack --config webpack.prod.js",
+    "start": "npm run build-prod && node src/server/index.js",
+    "build-prod": "webpack --config webpack.prod.js && node src/server/index.js",
     "build-dev": "webpack-dev-server  --config webpack.dev.js --open"
   },
   "keywords": [],
